# generate

./: CMakeLists.txt
experiments/yang-mills-finite-bridge/: README.md  pyproject.toml
experiments/yang-mills-finite-bridge/docs/: catalog-of-objects.md  lattice-data-model.md  proof-discipline.md  roadmap.md
experiments/yang-mills-finite-bridge/src/ym_finite_bridge/: __init__.py  lattice.py  su2.py
experiments/yang-mills-finite-bridge/tests/: test_lattice.py  test_su2.py
opencog/guile/modules/: GenerateSCM.cc
tests/generate/: AggregationUTest.cxxtest  BasicNetworkUTest.cxxtest  GraphUTest.cxxtest
